# CoHSCI

./: .gitignore  Plan2.drawio  README.md  Untitled Diagram.drawio  action.drawio  architecture.drawio  classifier.drawio  compose.yaml  control_flow.drawio  emojis.drawio  expermient illustrations.drawio  flow_diagram.drawio  hrc_task_sequence.drawio  implementation_structure.drawio  inmsg_sructure.drawio  jog_control.drawio  literature_review_structure.drawio  methodology_structure.drawio  outmsg_structure.drawio  requirements.txt  robot.drawio  robot_flow.drawio  segment_architecture.drawio  segment_strategy.drawio  tester_cencured.drawio  validator.drawio  webcam_architecture.drawio  work_flow.drawio  work_flow_sequence.drawio
demos/: cam.py
src/: classifier.py  config.toml  control.py  experiment_temp.py  gemma3_agent.py  gemma_gesture_analysis.txt  logger.py  messageq.py  robot.py  robot_msgs.json  robot_tester.py  segment.py  validator.py  vlm_agent.py  webcam.py
src/classifier/: Dockerfile  classifier.py  config.toml  requirements.txt  vlm_agent.py
src/config/: config.toml
src/control/: Dockerfile  control.py  requirements.txt
src/messageq/: __init__.py  messageq.py  pyproject.toml
src/messageq/messageq.egg-info/: PKG-INFO  SOURCES.txt
src/robot/: Dockerfile  config.toml  requirements.txt  robot.py
src/segmentor/: Dockerfile  config.toml  requirements.txt  segment.py
src/settings/: __init__.py  config.toml  windows_congif.toml
src/webcam/: Dockerfile  config.toml  webcam.py  (+1 more)
tooling/: img_viewer.py  log_analysis.py  log_calc.py  system_tester.py
