[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "messageq"
version = "0.0.1"
authors = [
  { name="Aaro Haikonen", email="aaro.haikonen99@gmail.com" },
]
description = "A wraooer for rabbitMq"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "pika", 
  "numpy", 
  "opencv-contrib-python==4.12.0.88",
  "opencv-python==4.12.0.88"
]

[project.urls]
Homepage = "https://github.com/GreatSharky/dippa-codes"
