[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "messageq"
version = "0.0.1"
authors = [
  { name="Aaro Haikonen", email="aaro.haikonen99@gmail.com" },
]
description = "A wraooer for rabbitMq"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "pika"
]

[project.urls]
Homepage = "https://github.com/GreatSharky/dippa-codes"
