[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "messageq"
version = "0.0.1"
authors = [
  { name="Aaro Haikonen", email="aaro.haikonen99@gmail.com" },
]
description = "A wrapper for rabbitMQ"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "pika",
  "opencv-contrib-python==4.12.0.88",
  "opencv-python==4.12.0.88",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/GreatSharky/dippa-codes"
